fixed horizontal scroll in contact section

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -161,15 +161,39 @@
 }
 
 @media (max-width: 400px) {
+    // contact section 
+    .contactIconList {
+        li {
+            max-width: 100%;
+        }
+        .contactLinkText{
+            padding: 12px 0 12px 5px;
+        }
+        .contactLinkText::after {
+            left: 5px;
+            bottom: 4px;
+            height: 4px;
+            width: calc((100%) - 12px);
+        }
+
+    }
     // typed text font size
     .typedText{
         font-size: .95rem;
     }
     // contact section font
-    .contactIconList i {
-        font-size: 2.5rem;
+    .contactIconList li i {
+        font-size: 2rem;
     }
-    .contactIconList a {
+    .contactIconList li a {
         font-size: 1rem;
+    }
+
+}
+
+@media (max-width: 370px) {
+    .projectButton {
+        padding-left: 24px;
+        padding-right: 24px;
     }
 }
