--- a/styles/style.css
+++ b/styles/style.css
@@ -750,9 +750,6 @@ section.contact h3 {
   font-weight: 700;
   color: #114B5F;
 }
-.contactIconList li a:nth-child(2) {
-  padding: 20px;
-}
 .contactIconList li i {
   font-size: 3rem;
   color: #114B5F;
@@ -766,6 +763,7 @@ section.contact h3 {
 }
 .contactIconList .contactLinkText {
   position: relative;
+  padding: 20px;
 }
 .contactIconList .contactLinkText::after {
   content: "";
@@ -1043,13 +1041,31 @@ footer .wrapper p {
   }
 }
 @media (max-width: 400px) {
+  .contactIconList li {
+    max-width: 100%;
+  }
+  .contactIconList .contactLinkText {
+    padding: 12px 0 12px 5px;
+  }
+  .contactIconList .contactLinkText::after {
+    left: 5px;
+    bottom: 4px;
+    height: 4px;
+    width: calc(100% - 12px);
+  }
   .typedText {
     font-size: 0.95rem;
   }
-  .contactIconList i {
-    font-size: 2.5rem;
+  .contactIconList li i {
+    font-size: 2rem;
   }
-  .contactIconList a {
+  .contactIconList li a {
     font-size: 1rem;
+  }
+}
+@media (max-width: 370px) {
+  .projectButton {
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
